--- a/friends.html
+++ b/friends.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,41 +10,58 @@
   </head>
 
   <body>
-<nav class="nav">
-    <ul class="nav__list">
-        <li class="nav__btn">
-            <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a>
-        </li>
-        <li class="nav__btn">
-            <a class="nav__link" href="#"><i class="far fa-comment fa-2x"></i></a>
-        </li>
-        <li class="nav__btn">
-            <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
-        </li>
-        <li class="nav__btn">
-            <a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-2x"></i></a>
-        </li>
-    </ul>
-</nav>
-    <div id="status-bar">
-        <div class="status-bar">
-          <div class="status-bar__column">
-            <span>No Service</span>
-            <!-- To Do: Wifi Icon -->
-            <i class="fas fa-wifi"></i>
-          </div>
-          <div class="status-bar__column">
-            <span>18:43</span>
-          </div>
-          <div class="status-bar__column">
-            <span>110%</span>
-            <!-- Battery Icon -->
-            <!-- Lightning Icon -->
-            <i class="fas fa-battery-full"></i>
-            <i class="fas fa-bolt"></i>
-          </div>
-        </div>
+    <div class="status-bar"></div>
 
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+      </div>
+    </header>
+
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i> </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#">
+            <span class="nav__notification">1</span>
+            <i class="far fa-comment fa-2x"></i>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i> </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#">
+            <span class="nav__notidot"></span>
+            <i class="fas fa-ellipsis-h fa-2x"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <div id="status-bar">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span>No Service</span>
+          <!-- To Do: Wifi Icon -->
+          <i class="fas fa-wifi"></i>
+        </div>
+        <div class="status-bar__column">
+          <span>18:43</span>
+        </div>
+        <div class="status-bar__column">
+          <span>110%</span>
+          <!-- Battery Icon -->
+          <!-- Lightning Icon -->
+          <i class="fas fa-battery-full"></i>
+          <i class="fas fa-bolt"></i>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
-
